# neuralNetworkPlayLife

./: .flake8  .gitignore  .pylintrc  README.md  RUNNING_GUIDE.md  main.py  neuralnetworkplaylife.pyproject  perceptron.ipynb  pyproject.toml  run.sh  training_data.csv
.github/workflows/: flake8.yml  pylint.yml
controller/: training_controller.py  training_worker.py  utils.py
docs/source/: conf.py  index.rst
lib/deep_learning/: connection.py  input.py  layer.py  neural_network.py  perceptron.py
lib/game_of_life/: board.py  cell.py  gen.py
lib/utils/: utils.py
models/: training_list_model.py  training_model.py
views/: about_dialog.py  gui_window.py
views_qt/: dialog.ui  mainwindow.ui
