[tool.poetry]
name = "neuralnetworkplaylife"
version = "0.1.0"
description = ""
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySide6 = "^6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
