[tool.poetry]
name = "neuralNetworkPlayLife"
version = "0.1.0"
description = ""
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "^1.24.3"
PySide6 = "^6.5.1"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
Sphinx = "^7.0.1"
sphinx-autoapi = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
